--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
+    <style>
+      #unity-canvas{
+        width: 100%;
+        height: 100%;
+      }
+    </style>
     <script src="Build/WEB.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
