--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Missile's journey</title>
-  </head>
-  <body style="text-align: center">
-    <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <style>
-      #unity-canvas{
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-    <script src="Build/WEB.loader.js"></script>
-    <script>
-      createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/WEB.data.unityweb",
-        frameworkUrl: "Build/WEB.framework.js.unityweb",
-        codeUrl: "Build/WEB.wasm.unityweb",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Missile's journey",
-        productVersion: "1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      });
-    </script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Unity WebGL Player | Missile's journey</title>
+</head>
+
+<body style="text-align: center">
+  <canvas id="unity-canvas"></canvas>
+  <style>
+    #unity-canvas {
+      width: 100%;
+      height: 100%;
+      background: #231F20;
+    }
+
+    html,
+    body {
+      margin: 0px;
+    }
+  </style>
+  <script src="Build/WEB.loader.js"></script>
+  <script>
+    createUnityInstance(document.querySelector("#unity-canvas"), {
+      dataUrl: "Build/WEB.data.unityweb",
+      frameworkUrl: "Build/WEB.framework.js.unityweb",
+      codeUrl: "Build/WEB.wasm.unityweb",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "Missile's journey",
+      productVersion: "1.0",
+      // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+      // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
+    });
+  </script>
+</body>
+
 </html>
