--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
 <body style="text-align: center">
   <canvas id="unity-canvas"></canvas>
   <style>
-    #unity-canvas {
+    #unity-canvas, html, body {
       width: 100%;
       height: 100%;
       background: #231F20;
-    }
-
-    html,
-    body {
-      margin: 0px;
+      margin:0px;
     }
   </style>
   <script src="Build/WEB.loader.js"></script>
