--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Unity WebGL Player | Missile's journey</title>
+  <title>Missile's journey</title>
+
+  <meta name="description" content="Missile's journey" />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4caf50">
+  <meta name="msapplication-TileColor" content="#4caf50">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body style="text-align: center">
   <canvas id="unity-canvas"></canvas>
   <style>
-    #unity-canvas, html, body {
+    #unity-canvas,
+    html,
+    body {
       width: 100%;
       height: 100%;
       background: #231F20;
-      margin:0px;
+      margin: 0px;
     }
   </style>
   <script src="Build/WEB.loader.js"></script>
