--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <meta name="description" content="Missile's journey" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4caf50">
+  <link rel="apple-touch-icon" sizes="180x180" href="Missiles-journey/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="Missiles-journey/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="Missiles-journey/favicon-16x16.png">
+  <link rel="manifest" href="Missiles-journey/site.webmanifest">
+  <link rel="mask-icon" href="Missiles-journey/safari-pinned-tab.svg" color="#4caf50">
+  <link rel="shortcut icon" href="Missiles-journey/favicon.ico">
   <meta name="msapplication-TileColor" content="#4caf50">
+  <meta name="msapplication-config" content="Missiles-journey/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 </head>
 
