--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <meta name="description" content="Missile's journey" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/path/to/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/path/to/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/path/to/icons/favicon-16x16.png">
-  <link rel="manifest" href="/path/to/icons/site.webmanifest">
-  <link rel="mask-icon" href="/path/to/icons/safari-pinned-tab.svg" color="#4caf50">
-  <link rel="shortcut icon" href="/path/to/icons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/Missiles-journey/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/Missiles-journey/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/Missiles-journey/icons/favicon-16x16.png">
+  <link rel="manifest" href="/Missiles-journey/icons/site.webmanifest">
+  <link rel="mask-icon" href="/Missiles-journey/icons/safari-pinned-tab.svg" color="#4caf50">
+  <link rel="shortcut icon" href="/Missiles-journey/icons/favicon.ico">
   <meta name="msapplication-TileColor" content="#4caf50">
-  <meta name="msapplication-config" content="/path/to/icons/browserconfig.xml">
+  <meta name="msapplication-config" content="/Missiles-journey/icons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 </head>
 
