--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="ja">
 
 <head>
   <meta charset="utf-8">
@@ -28,7 +28,7 @@
     body {
       width: 100%;
       height: 100%;
-      background: #231F20;
+      background: #ffffff;
       margin: 0px;
     }
   </style>
